--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,8 @@ main:
   - title: "CV/Bio"
     url: /cv/
     
+  - title: "Projects"
+    url: /projects/
+
   - title: "Contact"
     url: /contact/
