--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xinyu Zhou"
+title                    : "Xinyu Zhou (周新宇)"
 title_separator          : "-"
 name                     : &name "Xinyu Zhou"
 description              : &description "Undergraduate Student, Fudan University"
